--- a/loginform.html
+++ b/loginform.html
@@ -15,11 +15,15 @@
         <form>
             <input type="email" name="email" placeholder="Enter Your Email" required> <br>
             <input type="password" name="password" placeholder="Password" required><br>
+
             <button type="submit">Login</button>
+
         </form>
     </div>
 
-
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio amet expedita quidem pariatur iure fugiat
+        voluptatum magnam molestiae, doloribus dolorem! Ullam accusamus ipsam ipsum numquam, aliquid doloremque ratione
+        quo rerum?</p>
 
 
 </body>
