--- a/newloginform.html
+++ b/newloginform.html
@@ -10,10 +10,11 @@
     <div class="form-container">
         <p class="login-text">LOGIN</p>
         <p class="login-title">Please enter your login and password</p>
-        <input type="email"> <br>
+        <input  type="email" name="email" placeholder="enter email" required> <br>
         
-        <input type="password"> <br>
-        <input type="submit" name="login">
+        <input type="password" name="password" placeholder="enter password" required> <br>
+      <a class="forget-form" href="#">Forgot Your Password?</a> <br>
+      <button class="submit-form" type="submit">Login</button>
     </div>
 </body>
 </html>
