--- a/netlify.html
+++ b/netlify.html
@@ -67,7 +67,7 @@
             <button>Add to cart</button>
 
         </div>
-            <br>
+        <br>
         <div class="images">
             <img src="images/nail cutter.jpg" alt="nail cutter">
             <h2>nail Cutter</h2>
@@ -83,12 +83,13 @@
 
         </div>
         <div class="images">
-            <img src="images/sofa" alt="sofa">
+            <img src="images/sofa.webp" alt="sofa">
             <h2>sofa</h2>
             <p>$2</p>
             <button>Add to cart</button>
 
-        </div> <div class="images">
+        </div>
+        <div class="images">
             <img src="images/tv.jpg" alt="tv">
             <h2>TV</h2>
             <p>$2</p>
