added ledger on all

--- a/netlify.html
+++ b/netlify.html
@@ -96,6 +96,43 @@
             <button>Add to cart</button>
 
         </div>
+        <div class="images">
+            <img src="images/ledger.jpg" alt="ledger">
+            <h2>ledger</h2>
+            <p>$650</p>
+            <button>Add to cart</button>
+
+        </div> <div class="images">
+            <img src="images/ledger.jpg" alt="ledger">
+            <h2>ledger</h2>
+            <p>$650</p>
+            <button>Add to cart</button>
+
+        </div> <div class="images">
+            <img src="images/ledger.jpg" alt="ledger">
+            <h2>ledger</h2>
+            <p>$650</p>
+            <button>Add to cart</button>
+
+        </div> <div class="images">
+            <img src="images/ledger.jpg" alt="ledger">
+            <h2>ledger</h2>
+            <p>$650</p>
+            <button>Add to cart</button>
+
+        </div> <div class="images">
+            <img src="images/ledger.jpg" alt="ledger">
+            <h2>ledger</h2>
+            <p>$650</p>
+            <button>Add to cart</button>
+
+        </div> <div class="images">
+            <img src="images/ledger.jpg" alt="ledger">
+            <h2>ledger</h2>
+            <p>$650</p>
+            <button>Add to cart</button>
+
+        </div>
 
     </div> <br> <br><br>
 
