--- a/modalbox.html
+++ b/modalbox.html
@@ -12,8 +12,8 @@
    
     <div class="modal-text">Are you sure you want to delete this element?</div>
     <div class="modal-buttons">
-      <div class="button-yes">YES</div>
-      <div class="button-yes">NO</div>
+      <div class="gap">YES</div>
+      <div class="gap">NO</div>
     </div>
   </div>
 </body>
