--- a/complexgrid.html
+++ b/complexgrid.html
@@ -11,6 +11,9 @@
         <div class="header">head</div>
         <div class="menu">menu</div>
         <div class="bodi">body</div>
+        <div class="bodi1">body1</div>
+        <div class="bodi2">body2</div>
+        <div class="bodi3">body3</div>
         <div class="footer">footer</div>
     </div>
     
