--- a/html/loopassign.html
+++ b/html/loopassign.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Try Javascript</title>
-    <script src="javascript/tryjs.js"></script>
+    <title>Assignment loop</title>
+    <script src="C:\Mern\loopassign.js"></script>
 </head>
 <body>
-    <h1>hello</h1>
-    
+    <h1>hey</h1>
 </body>
 </html>
